--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700&display=swap" rel="stylesheet">
-    <title>Taiwan 538</title>
+    <title>隔日作廢</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
