--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     除了用選票教訓政黨
     就是製作一個視覺化網站
     讓團員們一起同甘共苦">
-    <meta name="twitter:image" content="REACT_APP_PROJECT_URL%%PUBLIC_URL%/twitter.png">
+    <meta name="twitter:image" content="%REACT_APP_PROJECT_URL%%PUBLIC_URL%/twitter.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta
       name="description"
