url on fb to link to article

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
                                               就是製作一個視覺化網站
                                               讓團員們一起同甘共苦">
     <meta property="og:image" content="%REACT_APP_PROJECT_URL%%PUBLIC_URL%/facebook.png">
-    <meta property="og:url" content="%REACT_APP_PROJECT_URL%">
+    <meta property="og:url" content="%REACT_APP_PROJECT_URL%/spreadword">
     <meta name="twitter:title" content="隔日作廢">
     <meta name="twitter:description" content="身為一介庶民
     除了用選票教訓政黨
